--- a/src/components/shopSideBar/shopSideBar.css
+++ b/src/components/shopSideBar/shopSideBar.css
@@ -75,3 +75,74 @@
     background-color: #FFCC2E;
     border-color: #FFCC2E;
 }
+
+/* bytger */
+/* Position and sizing of burger button */
+.bm-burger-button {
+    position: relative;
+    width: 30px;
+    height: 24px;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: var(--grayViolet);
+  }
+  
+  /* Color/shape of burger icon bars on hover*/
+  /* .bm-burger-bars-hover {
+    background: var(--orange-color);
+  } */
+  .bm-burger-bars:hover {
+    background: var(--orange-color);  
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 0;
+    width: 0;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    /* background: #bdc3c7; */
+    display: none;
+  }
+  
+  /*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+  .bm-menu-wrap {
+    position: relative!important;
+    height: 100%;
+    border-radius: 10px;
+}
+
+/* General sidebar styles */
+.bm-menu {
+      background-color: white!important;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: #b8b7ad;
+    padding: 0.8em;
+  }
+  
+  /* Individual item */
+  .bm-item {
+    display: inline-block;
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.0)!important;
+  }
