--- a/src/pages/OrderHistory/OrderHistory.css
+++ b/src/pages/OrderHistory/OrderHistory.css
@@ -1,66 +1,80 @@
-.WishlistPage {
+.OrderHistoryPage {
     width: 100%;
 }
 
-.wishlist {
+.ohp-tablepart {
     width: 80%;
     margin: 7% auto;
 }
 
-.wishTable {
+.ohTable {
     width: 100%;
     border: 1px solid var(--light-yellow);
 }
 
-.wishTable td {
+.ohTable td {
     vertical-align: middle;
     text-align: center;
 }
 
-.wishTable>thead {
+.ohTable>thead {
     width: 100%;
     padding: 10% 0;
     background-color: var(--light-yellow);
 }
 
-.wishTable>thead>tr>th{
+.ohTable>thead>tr>th{
     padding: 2% 0;
     font-family: "Josefin Sans";
     color: var(--yellow-color);
 }
 
-.wishTable td div {
+.ohTable>tbody  >tr {
+    border-bottom: 2px solid var(--light-yellow);
+}
+
+.ohTable td div {
     vertical-align: middle;
     display: inline-block;
 }
 
-.wishTable tbody tr td {
+.ohTable tbody tr td {
     padding: 1%;
 }
 
 /* columns */
 
-.wlImgCol {
+/* img */
+.ohImgCol {
     width: 12%;
 }
+.ohImg {
+    width: 100%;
+}
 
-.wlName {
-    width: 34%;
+.ohImg>img {
+    object-fit: cover;
+    width: 100%;
+}
+
+
+.ohName {
+    width: 38%;
     font-family: 'Jost';
     font-weight: 500;
     font-size: 17px;
 }
 
-.wlPrice, .wlAdding, .wlDel {
-    width: 18%;
+.ohPrice, .ohAdding {
+    width: 24%;
 }
 
 /* add to cart */
-.wl-addCart {
+.oh-addCart {
     width: 100%;
 }
 
-.wl-addCart>button {
+.oh-addCart>button {
     width: 75%;
     padding: 3% 0;
     background-color: var(--orange-color);
@@ -69,21 +83,4 @@
     border-radius: 5px;    
 }
 
-/* img */
-.wlImg {
-    width: 100%;
-    object-fit: cover;
-}
 
-.wlImg>img {
-    width: 100%;
-}
-
-
-/* delete product*/
-.wlDelIcon {
-    display: flex;
-    width: 100%;
-    height: 1.5em;
-    cursor: pointer;
-}
