--- a/src/components/HeadingBar/Navbar.css
+++ b/src/components/HeadingBar/Navbar.css
@@ -36,8 +36,19 @@
   margin-left: 10%;
 }
 
-.NavbarPart {
-  position: fixed;
+.nPartBrand {
+  position: relative;
+  width: 100%;
+  z-index: 2001;
+  /* background-color: white; */
+  padding: 1% 0 1% 0%;
+  text-align: left;
+  display: flex;
+  align-items: center;
+}
+
+.burgerNav {
+  /* position: fixed; */
   width: 100%;
   z-index: 2001;
   background-color: white;
@@ -46,32 +57,33 @@
   display: flex;
   align-items: center;
 }
+
 /* Position and sizing of burger button */
-.NavbarPart .bm-burger-button {
+.burgerNav .bm-burger-button {
   position: relative;
   width: 36px;
   height: 30px;
-
+  margin-left: 100%;
 }
 
 /* Color/shape of burger icon bars */
-.NavbarPart .bm-burger-bars {
+.burgerNav .bm-burger-bars {
   background: #373a47;
 }
 
 /* Color/shape of burger icon bars on hover*/
-.NavbarPart .bm-burger-bars-hover {
+.burgerNav .bm-burger-bars-hover {
   background: #a90000;
 }
 
 /* Position and sizing of clickable cross button */
-.NavbarPart .bm-cross-button {
+.burgerNav .bm-cross-button {
   height: 24px;
   width: 24px;
 }
 
 /* Color/shape of close button cross */
-.NavbarPart .bm-cross {
+.burgerNav .bm-cross {
   background: #bdc3c7;
 }
 
@@ -79,21 +91,21 @@
   Sidebar wrapper styles
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
-.NavbarPart .bm-menu-wrap {
+.burgerNav .bm-menu-wrap {
   position: fixed !important;
   height: 100%;
+  margin-bottom: 2%;
 }
 
 /* General sidebar styles */
-.NavbarPart .bm-menu {
-  /* margin-right: -20%; */
+.burgerNav .bm-menu {
   background: #373a47;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
 
 /* Morph shape necessary with bubble or elastic */
-.NavbarPart .bm-morph-shape {
+.burgerNav .bm-morph-shape {
   fill: #373a47;
 }
 
@@ -104,20 +116,19 @@
 }
 
 /* Individual item */
-.NavbarPart .bm-item {
+.burgerNav .bm-item {
   display: inline-block;
 }
 
 /* Styling of overlay */
-.NavbarPart .bm-overlay {
+.burgerNav .bm-overlay {
   background: rgba(0, 0, 0, 0) !important;
-  width: 30% !important;
+  width: 0% !important;
 }
 
 /* Individual item */
-.NavbarPart .bm-item {
+.burgerNav .bm-item {
   display: inline-block;
-
   color: #d1d1d1;
   margin-bottom: 10px;
   text-align: left;
@@ -125,6 +136,34 @@
   transition: color 0.2s;
 }
 
-.NavbarPart .bm-item:hover {
+.burgerNav .bm-item:hover {
   color: #ffffff;
+}
+
+/* EXTEND NAVBAR */
+.extendNav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+}
+.extendNav .brand {
+  width: 8%;
+}
+.extendNav .NavbarPart{
+  display: flex;
+  width: 90%;
+  padding: 1% 3%;
+  align-items: center;
+  justify-content: space-between;
+  /* flex-direction: row; */
+}
+.extendNav .navPages {
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+}
+.extendNav .nSearcArea {
+  display: flex;
+  width: 30%;
 }
