header navbar hamburger menu

--- a/src/components/HeadingBar/HeadingBar.css
+++ b/src/components/HeadingBar/HeadingBar.css
@@ -6,7 +6,7 @@
   margin-left: 2.5% !important;
 }
 
-.nav-link {
+.headerdroplistitem .nav-link {
   font-family: "Josefin Sans" !important;
   font-style: normal;
   font-weight: 400 !important;
