--- a/src/components/PagePath/PagePath.css
+++ b/src/components/PagePath/PagePath.css
@@ -1,11 +1,11 @@
 .PagePath {
     width: 100%;   
-    /* height: 40vh; */
-    padding: 15% 0 3% 0;
+    height: 38vh;
+    /* padding: 15% 0 3% 0; */
     background-color: var(--most-light-violet);
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     text-align: left;
 }
 
