--- a/src/components/BlogSide/LittleBlog.css
+++ b/src/components/BlogSide/LittleBlog.css
@@ -44,50 +44,24 @@ a .bDetail {
 
 @media(max-width:737.5px){
 
-    .blog-area {
-        width: 100%;
-    }
-    
-    .allBlog-page{
+    .LittleBlog {
         display: flex;
-        flex-direction: column-reverse;
+        flex: 1 1 120px;
+        flex-grow: 0;
     }
-
-    .blogCategories, .recentPosts, .saleProducts, .b-smedias {
-        margin: 20% 0;
-    }
-
-    .BlogSide h1 {
-        margin-bottom: 4%;
-    }
-
-    .cList {
-        display: flex;
-        flex-direction: row;
-        gap: 6%;
-        margin-top: -5%;
-        flex-flow: nowrap;
-    }
-
-    .eachPost, .eachProduct{
-        display: flex;
-        gap:11%;
-    }
-
     .LittleBlog>a {
         margin-bottom: 6%;
-        display: flex;
-        gap: 9px;
+        flex-direction: column;
     }
 
     a>.lBlog-img {
-        width: 41%;
+        width: 90%;
+        margin-bottom: 5%;
         object-fit: cover;
     }
 
     a>.lBlogInfo {
-        width: 166px;
+        width: 100%;
     }
     
-
 }
