--- a/src/pages/BlogPage/BlogPage.css
+++ b/src/pages/BlogPage/BlogPage.css
@@ -1,23 +1,36 @@
 .BlogPage {
-    width: 100%;
+  width: 100%;
 }
 
 .allBlog-page {
-    width: 70%;
-    margin: 8% auto;
-    display: flex;
-    justify-content: space-between;
+  width: 70%;
+  margin: 8% auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .blog-area {
-    width: 60%;
+  width: 60%;
 }
 
 /* ADDITIONAL */
 .blog-additional {
-    width: 35%;
-    display: flex;
-    flex-direction: column;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
 }
 
+@media (max-width: 737.5px) {
+  .blog-area {
+    width: 100%;
+  }
 
+  .allBlog-page {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .blog-additional {
+    width: 100%;
+    margin: 0% auto;
+  }
+}
