--- a/src/components/HeadingBar/Navbar.css
+++ b/src/components/HeadingBar/Navbar.css
@@ -2,8 +2,8 @@
   margin-top: 0px !important;
 }
 
-.homedrop,
- .navPages .nav-link,
+.pagedrop,
+.navPages .nav-link,
 .dropdown-item1 {
   /* color: #b8b7ad !important ; */
   font-family: "Josefin Sans" !important;
@@ -13,7 +13,28 @@
   line-height: 30px !important;
 }
 
-.dropdown-toggle{
+.navPages .nav-link {
+  background: rgb(209, 143, 255);
+  background: linear-gradient(
+      90deg,
+      rgba(209, 143, 255, 1) 0%,
+      rgba(255, 127, 248, 1) 31%,
+      rgba(248, 140, 249, 1) 70%,
+      rgba(209, 143, 255, 1) 100%
+    )
+    no-repeat right bottom / 0 var(--bg-h);
+  transition: background-size 350ms;
+  --bg-h: 100%;
+  padding-bottom: 2px;
+  --bg-h: 2px;
+}
+
+.navPages .nav-link:where(:hover, :focus-visible) {
+  background-size: 100% var(--bg-h);
+  background-position-x: left;
+}
+
+.dropdown-toggle {
   margin-top: 3%;
 }
 
@@ -31,7 +52,6 @@
   align-items: center;
 }
 
-
 .brand {
   font-family: "Josefin Sans";
   font-style: normal;
@@ -42,9 +62,9 @@
   margin-left: 3%;
 }
 
-.navbar-brand{
+.navbar-brand {
   margin-left: 8%;
-    margin-top: 1%;
+  margin-top: 1%;
 }
 
 .navcollapse {
@@ -170,7 +190,7 @@
 .extendNav .brand {
   width: 8%;
 }
-.extendNav .NavbarPart{
+.extendNav .NavbarPart {
   display: flex;
   width: 90%;
   padding: 1% 3%;
@@ -189,14 +209,14 @@
   width: 30%;
 }
 
-@media (max-width:989.5px){
-  .navPages{
+@media (max-width: 989.5px) {
+  .navPages {
     gap: 10px;
     display: flex;
     flex-direction: column;
   }
 
-  .form-control{
+  .form-control {
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -209,8 +229,8 @@
     background-color: inherit !important;
     border: none;
   }
-  
-  .dropdown-item1{
+
+  .dropdown-item1 {
     color: #b8b7ad !important ;
   }
 }
