--- a/src/components/HeadingBar/HeadingBar.css
+++ b/src/components/HeadingBar/HeadingBar.css
@@ -6,6 +6,11 @@
   margin-left: 2.5% !important;
 }
 
+.navbar-brand {
+  margin-left: 13%;
+  margin-top: 1%;
+}
+
 .headerdroplistitem .nav-link {
   font-family: "Josefin Sans" !important;
   font-style: normal;
@@ -114,6 +119,7 @@
   margin-top: -7px;
 }
 
+
 @media (max-width: 991.5px) {
   .headerdroplist {
     display: flex;
@@ -121,19 +127,35 @@
     width: 98%;
     margin-left: 2%;
   }
-
+  
   .headerdroplistitem {
     font-size: 12px;
     line-height: 14px;
   }
-
+  
   .headerdroplistitem1 {
     font-size: 12px;
     line-height: 14px;
   }
+
 }
 
 .dropdown-menu.show {
   z-index: 20002 !important;
   background-color: var(--light-violet);
 }
+
+@media (max-width: 989.5px){
+
+  #collasible-nav-dropdown ~ .dropdown-menu.show {
+      display: block;
+      position: absolute !important;
+      inset: 0px auto auto 0px;
+      transform: translate3d(2px, 2px, 0px) !important;
+      background-color: var(--light-violet) !important;
+      z-index: 20002 !important;
+      border: var(--bs-dropdown-border-width) ;
+      margin-top: 1.605rem;
+  }
+}
+
