--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -77,12 +77,12 @@
   display: flex;
   text-align: left;
   align-items: center;
-  width: 46%;
-  height: 10vh;
+  width: 47%;
+  height: 12vh;
 }
 
 .way > div > span {
-  width: 15%;
+  width: 20%;
   height: 5vh;
   border-radius: 50%;
   margin-right: 5%;
@@ -187,4 +187,87 @@
 
 .map {
   margin: 0 0 7% 0;
+}
+
+@media (max-width: 991.5px) {
+  .way {
+    display: flex;
+    flex-direction: column;
+  }
+  .way > div {
+    width: 61%;
+    height: 10vh;
+    margin-bottom: 3%;
+  }
+  .way > div > span {
+    width: 15%;
+    height: 4.5vh;
+    margin-right: 10%;
+  }
+}
+
+@media (max-width: 715.5px) {
+  .contact-info {
+    width: 70%;
+    margin: 7% auto 3% auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .ci-aboutUs {
+    width: 90%;
+    text-align: left;
+  }
+  .ci-contWay {
+    width: 90%;
+  }
+
+  .way {
+    display: flex;
+    flex-direction: row;
+  }
+  .way > div {
+    width: 41%;
+    height: 10vh;
+    margin-bottom: 3%;
+}
+  .way > div > span {
+    width: 14%;
+    height: 5vh;
+    margin-right: 6%;
+}
+}
+
+
+@media(max-width: 590.5px){
+  .way {
+    display: flex;
+    flex-direction: column;
+  }
+  .way > div {
+    width: 73%;
+    height: 10vh;
+    margin-bottom: 3%;
+}
+.way > div > span {
+  width: 9%;
+  height: 5vh;
+  margin-right: 6%;
+}
+
+.contact-getTouch {
+  width: 98%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.cgt-content {
+  width: 56%;
+  display: flex;
+  flex-direction: column;
+  margin-left: -15%;
+}
+.cgt-image {
+  width: 56%;
+}
+
 }
