--- a/src/pages/ShopList/ShopList.css
+++ b/src/pages/ShopList/ShopList.css
@@ -32,7 +32,7 @@
   width: 30%;
   display: none;
 }
-.filterButton button{
+.filterButton button {
   width: 100%;
   outline: none;
   border: 1px solid var(--darkBlue-color);
@@ -73,7 +73,7 @@
   font-size: 15px;
 }
 
-select>option:hover {
+select > option:hover {
   background-color: yellow;
 }
 
@@ -84,7 +84,6 @@ select>option:hover {
   justify-content: space-between;
   margin: 5% auto 10% auto;
 }
-
 
 /* SHOP SIDEBAR */
 .shopSideBarPart {
@@ -104,7 +103,7 @@ select>option:hover {
 
 .menuSideBar .shopSideBar {
   width: 100%;
-  padding: 3% 0 0 10% ;
+  padding: 3% 0 0 10%;
   animation-name: showing;
   animation-duration: 0.5s;
 }
@@ -112,7 +111,6 @@ select>option:hover {
 @keyframes showing {
   0% {
     left: 0;
-
   }
   100% {
     left: 50%;
@@ -122,10 +120,10 @@ select>option:hover {
 .filterMenu {
   width: 50%;
   overflow-y: scroll;
-  /* height: 275px; */
-  height: 43vw;
+  height: 100vh;
+  position: absolute;
+  top: -135px;
 }
-
 
 .close-menu {
   width: 100%;
@@ -160,11 +158,16 @@ select>option:hover {
     flex-direction: column;
     align-items: flex-start;
   }
-  .list-filter{
+  .list-filter {
     width: 80% !important;
   }
   .filterMenu {
-    height: 48vw;
+    overflow-y: scroll;
+    height: 100vh;
+    width: 66%;
+    position: absolute;
+    top: -11%;
+    left: 8%;
   }
 }
 @media screen and (max-width: 991px) {
