--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -35,6 +35,13 @@
     outline: none;
 }
 
+.warning {
+    color: red;
+    font-family: 'Jost';
+    font-size: 14px;
+    margin-bottom: 2%;
+}
+
 .acceptTerm {
     width: 100%;
     margin: 3% 0;
