--- a/src/components/HeadingBar/Navbar.css
+++ b/src/components/HeadingBar/Navbar.css
@@ -73,11 +73,11 @@
 }
 
 .nPartBrand {
-  position: fixed;
+  position: relative;
   width: 100%;
   z-index: 2001;
   padding: 1% 0 1% 0%;
-  margin-bottom: 4%;
+  /* margin-bottom: 4%; */
   text-align: left;
   display: flex;
   align-items: center;
