--- a/src/pages/CartPage/CartPage.css
+++ b/src/pages/CartPage/CartPage.css
@@ -103,6 +103,15 @@
     font-size: 18px;
     margin: 0;
     color: var(--orange-color);
+    width: 100%;
+}
+.grandTotal td:nth-child(5) {
+    width: 20%;
+}
+
+
+.gt-txt p {
+    width: 100%;
 }
 
 .gt-total {    
